<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/mainWrapper"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_xlarge">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout_confirm_msg"
        android:gravity="center"
        android:textSize="@dimen/text_size_large"
        android:layout_marginTop="@dimen/min_margin"/>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_large">
        <Button
            android:id="@+id/cancel_logout_btn"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/text_no"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/logout_yes_btn"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/text_yes"
            android:textColor="@color/accent"/>
    </TableRow>
</LinearLayout>