<RelativeLayout
    android:id="@+id/mainContainer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/toolbar_wrapper"
        layout="@layout/layout_header_file"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_wrapper"
        android:layout_margin="@dimen/margin_xxlarge"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/edittext_custom_background"
            android:hint="@string/email_text"
            android:padding="@dimen/padding_extra_normal"
            android:textColor="@color/white"
            android:singleLine="true"
            android:textSize="@dimen/text_size_large"
            android:textColorHint="@color/white"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginRight="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_normal"/>

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/edittext_custom_background"
            android:hint="@string/password_text"
            android:padding="@dimen/padding_extra_normal"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/text_size_large"
            android:singleLine="true"
            android:inputType="textPassword"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginRight="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_normal"/>

        <EditText
            android:id="@+id/edt_ConfPassword"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:textSize="@dimen/text_size_large"
            android:background="@drawable/edittext_custom_background"
            android:hint="@string/confirmpassword_text"
            android:padding="@dimen/padding_extra_normal"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:singleLine="true"
            android:inputType="textPassword"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginRight="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_normal"/>

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_xlarge"
            android:background="@drawable/edittext_custom_background_black"
            android:text="@string/sign_up_text"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/alreadyRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Already Registered ? Sign in here"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:padding="8dp"/>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="@dimen/margin_large"
            android:gravity="center_vertical"
            android:padding="@dimen/padding_normal">


            <com.facebook.login.widget.LoginButton
                android:id="@+id/facebookLoginButton"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingBottom="@dimen/padding_large"
                android:paddingTop="@dimen/padding_large"
                android:textAllCaps="true"
                android:visibility="visible"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large"
                app:com_facebook_login_text="@string/facebook_login" />
            android:layout_marginTop="@dimen/margin_large"/>

        </TableRow>
        <com.twitter.sdk.android.core.identity.TwitterLoginButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginRight="@dimen/margin_large"
            android:layout_marginTop="5dp"/>

    </LinearLayout>
</RelativeLayout>
