<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:id="@+id/mainContainer">

    <include layout="@layout/layout_header_file"/>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fragmentOpponents"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">


        <TextView
            android:id="@+id/selectUsertextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:text="@string/select_user_to_call"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/grey"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/emptyTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/margin_large"
            android:layout_centerInParent="true"
            android:padding="@dimen/padding_normal"
            android:text="No Patient History Found"
            android:gravity="center"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:visibility="visible"/>

        <ListView
            android:id="@+id/opponentsList"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/linearLayout"
            android:layout_below="@+id/selectUsertextView"
            android:layout_gravity="center_horizontal"
            android:choiceMode="singleChoice"
            android:divider="@android:color/transparent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@android:color/transparent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAudioCall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/blue"
                android:layout_margin="@dimen/padding_normal"
                android:text="@string/btn_audio_call"
                android:textColor="@color/text_white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnVideoCall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/blue"
                android:text="@string/btn_video_call"
                android:textColor="@color/text_white"
                android:textSize="18sp"
                android:layout_margin="@dimen/padding_normal"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>